// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`OmniAST > Hybrid 1`] = `
Node {
  "end": 76,
  "properties": [
    Node {
      "computed": false,
      "end": 22,
      "key": Node {
        "end": 14,
        "name": "json",
        "start": 10,
        "type": "Identifier",
      },
      "kind": "init",
      "method": false,
      "shorthand": false,
      "start": 10,
      "type": "Property",
      "value": Node {
        "end": 22,
        "raw": "\\"here\\"",
        "start": 16,
        "type": "Literal",
        "value": "here",
      },
    },
    Node {
      "computed": false,
      "end": 69,
      "key": Node {
        "end": 41,
        "name": "myFunction",
        "start": 31,
        "type": "Identifier",
      },
      "kind": "init",
      "method": false,
      "shorthand": false,
      "start": 31,
      "type": "Property",
      "value": Node {
        "arguments": [
          Node {
            "end": 68,
            "properties": [
              Node {
                "computed": false,
                "end": 66,
                "key": Node {
                  "end": 57,
                  "name": "json",
                  "start": 53,
                  "type": "Identifier",
                },
                "kind": "init",
                "method": false,
                "shorthand": false,
                "start": 53,
                "type": "Property",
                "value": Node {
                  "end": 66,
                  "raw": "\\"again\\"",
                  "start": 59,
                  "type": "Literal",
                  "value": "again",
                },
              },
            ],
            "start": 51,
            "type": "ObjectExpression",
          },
        ],
        "callee": Node {
          "end": 50,
          "name": "jsAgain",
          "start": 43,
          "type": "Identifier",
        },
        "end": 69,
        "optional": false,
        "start": 43,
        "type": "CallExpression",
      },
    },
  ],
  "start": 1,
  "type": "ObjectExpression",
}
`;

exports[`OmniAST > Hybrid 2`] = `
{
  "properties": [
    {
      "key": {
        "name": "json",
        "type": "Identifier",
      },
      "kind": "init",
      "type": "Property",
      "value": {
        "raw": "\\"here\\"",
        "type": "Literal",
        "value": "here",
      },
    },
    {
      "key": {
        "name": "myFunction",
        "type": "Identifier",
      },
      "kind": "init",
      "type": "Property",
      "value": {
        "arguments": [
          {
            "properties": [
              {
                "key": {
                  "name": "json",
                  "type": "Identifier",
                },
                "kind": "init",
                "type": "Property",
                "value": {
                  "raw": "\\"again\\"",
                  "type": "Literal",
                  "value": "again",
                },
              },
            ],
            "type": "ObjectExpression",
          },
        ],
        "callee": {
          "name": "jsAgain",
          "type": "Identifier",
        },
        "type": "CallExpression",
      },
    },
  ],
  "type": "ObjectExpression",
}
`;
